fixing spacing

--- a/scss/dulcet/_global.scss
+++ b/scss/dulcet/_global.scss
@@ -246,7 +246,7 @@ iframe {
   width: 100%;
 }
 
-.page-about-directory .dul-staff-search-box div:nth-of-type(1) {
+.page-about-directory #search-block-form div:nth-of-type(1) {
   padding: 15px;
   background: url(/sites/all/themes/dulcet/assets/images/striped-grey.png) repeat left top;
 }
